fix : board 이미지 조회 전부 수정